--- a/js-back-end/cat-shelter-vanilla/package.json
+++ b/js-back-end/cat-shelter-vanilla/package.json
@@ -1,16 +1,12 @@
 {
   "name": "cat-shelter-vanilla",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Only core modules",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 666"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.13"
-  }
+  "license": "ISC"
 }
