--- a/js-back-end/plays/package.json
+++ b/js-back-end/plays/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
+    "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +17,10 @@
     "express-handlebars": "^5.3.2",
     "express-validator": "^6.12.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.14"
+    "mongoose": "^5.12.14",
+    "mongoose-paginate-v2": "^1.6.2"
+  },
+  "devDependencies": {
+    "jshint": "^2.13.1"
   }
 }
