exclude sites on manifest.json

--- a/extensions/dark-hue-rotate/manifest.json
+++ b/extensions/dark-hue-rotate/manifest.json
@@ -9,6 +9,10 @@
       ],
       "js": [
         "content.js"
+      ],
+      "exclude_matches": [
+        "*://*.replit.com/*",
+        "*://*.google.com/*"
       ]
     }
   ]
