switch landscape/portrait

--- a/extensions/5km-eee-play/manifest.json
+++ b/extensions/5km-eee-play/manifest.json
@@ -21,7 +21,8 @@
     },
     {
       "js": [
-        "scripts/5kmrun-age.js"
+        "scripts/5kmrun-age.js",
+        "scripts/fix-img.js"
       ],
       "matches": [
         "https://5kmrun.bg/5kmrun/result/*"
