milena.com jmp to main content

--- a/extensions/5km-eee-play/manifest.json
+++ b/extensions/5km-eee-play/manifest.json
@@ -35,6 +35,14 @@
       "matches": [
         "https://eee.bg/*"
       ]
+    },
+    {
+      "js": [
+        "scripts/milena-fix.js"
+      ],
+      "matches": [
+        "https://www.mihaylova-milena.com/*"
+      ]
     }
   ],
   "action": {
